--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "expo": "~52.0.37",
+    "expo-location": "^18.0.7",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-paper": "^5.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
